<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/register_device"
        android:title="@string/register_device"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item
        android:id="@+id/import_floor_map"
        android:title="@string/import_floor_map"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item
        android:id="@+id/toggle_resize_map"
        android:title="@string/resize_map"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item
        android:id="@+id/toggle_edit_devices"
        android:title="@string/edit_devices"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item
        android:id="@+id/toggle_scale_mode"
        android:title="@string/scale_mode"
        android:orderInCategory="100"
        android:showAsAction="never"/>
</menu>
